theme changes (content course thumbnail bux fix with the id printed, plugin changes (shotcodes, functions), bunch of CSS changes, fixing responsive for courses archive on front, fixing resp. for courses/students dashboard, fix resp. for course overview page on the front), instructor profile template changes, fixing small bug with not showing instructor courses, content course overview shortcode changes, language sc changes, course dashboard page styling and shortcode params changes, testing,  etc

--- a/css/front_course_single.css
+++ b/css/front_course_single.css
@@ -46,11 +46,11 @@
 }
 
 .enroll-box-left{
-    width: 49%;
+    width: 69%;
     float: left;
 }
 .enroll-box-right{
-    width: 49%;
+    width: 30%;
     float: right;
 }
 
